# convasist

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  convasist.config.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml
crates/convasist-core/: Cargo.toml
crates/convasist-core/src/: asr.rs  audio.rs  bm25.rs  chunk.rs  config.rs  dsp.rs  error.rs  fuse.rs  ipc.rs  lib.rs  llm.rs  prompt.rs  radar.rs  rag.rs  tracker.rs  vad.rs
docs/: phase-1-design-and-spec.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  asr_deepgram.rs  audio.rs  conversations.rs  embed.rs  lib.rs  llm.rs  main.rs  models.rs  rag.rs  recorder.rs  secrets.rs  session.rs  tracker.rs  vad_silero.rs
src/components/: AiSettings.tsx  AssistDock.tsx  ConsentGate.tsx  ConversationsPanel.tsx  HealthStrip.tsx  PreparingOverlay.tsx  RagPanel.tsx  SaveConversationDialog.tsx  SessionsPanel.tsx  SettingsPanel.tsx  StatusBar.tsx  TrackerRail.tsx
src/components/transcript/: TranscriptView.tsx
src/lib/: commands.ts  ipc.ts  sidecar.ts  useIpcBridge.ts
src/state/: app.ts  assist.ts  conversation.ts  transcript.ts
src/styles/: globals.css
