[workspace]
resolver = "2"
members = ["crates/convasist-core", "src-tauri"]
# Only the pure-logic core builds everywhere (CI lint/test on any OS).
# src-tauri needs a desktop GUI toolchain and is built on Windows.
default-members = ["crates/convasist-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1
