[workspace]
resolver = "2"
members = ["crates/convasist-core", "src-tauri"]
# Only the pure-logic core builds everywhere (CI lint/test on any OS).
# src-tauri needs a desktop GUI toolchain and is built on Windows.
default-members = ["crates/convasist-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"

[profile.release]
lto = "thin"
codegen-units = 1

# Real-time audio + ASR cannot run unoptimized. In dev builds, compile all
# dependencies -O3; our own crates stay -O1 so incremental rebuilds are still
# fast. One-time cost: the first build after this change recompiles every
# dependency.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
