[package]
name = "convasist-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "convasist — real-time AI conversation assistant (Tauri shell)"

# Windows is the Phase 1 target (design §9 row 4). This crate needs a desktop
# GUI toolchain; CI builds it on windows-latest. The pure-logic core builds
# everywhere.

[lib]
name = "convasist_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
convasist-core = { path = "../crates/convasist-core" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
# Capture: cpal speaks WASAPI on Windows, including loopback (an input
# stream built on an output device). Design §2.3.
cpal = "0.16"
# Lock-free SPSC ring between the device callback and the worker thread
# (§2.4 rule 1: callbacks only copy into a ring buffer).
rtrb = "0.3"
# Local ASR: whisper.cpp bindings (design §2.3). CPU by default; GPU
# features (cuda/vulkan/metal) are opt-in flags later.
whisper-rs = "0.14"
# First-run model downloader (T6) + LLM SSE streaming. Small blocking HTTP
# client — always driven from dedicated threads, never the UI or audio path.
ureq = { version = "2", features = ["json"] }
# API keys live in the OS credential vault (design §4.6) — Windows
# Credential Manager on the Phase 1 target.
keyring = { version = "3", features = ["windows-native", "linux-native"] }
