[package]
name = "convasist-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "convasist — real-time AI conversation assistant (Tauri shell)"

# Windows is the Phase 1 target (design §9 row 4). This crate needs a desktop
# GUI toolchain; CI builds it on windows-latest. The pure-logic core builds
# everywhere.

[lib]
name = "convasist_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
convasist-core = { path = "../crates/convasist-core" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
# Capture: cpal speaks WASAPI on Windows, including loopback (an input
# stream built on an output device). Design §2.3.
cpal = "0.16"
# Lock-free SPSC ring between the device callback and the worker thread
# (§2.4 rule 1: callbacks only copy into a ring buffer).
rtrb = "0.3"
# Local ASR: whisper.cpp bindings (design §2.3). CPU by default; GPU
# features (cuda/vulkan/metal) are opt-in flags later.
whisper-rs = "0.14"
# First-run model downloader (T6) + LLM SSE streaming. Small blocking HTTP
# client — always driven from dedicated threads, never the UI or audio path.
ureq = { version = "2", features = ["json"] }
# API keys live in the OS credential vault (design §4.6) — Windows
# Credential Manager on the Phase 1 target.
keyring = { version = "3", features = ["windows-native", "linux-native"] }
# Portable encrypted-secrets file (owner request): keys/values encrypted with
# a passphrase (from an env var) so the file is safe to commit to git and
# travels to another machine. cocoon = PBKDF2 + ChaCha20-Poly1305, salt+nonce
# handled internally.
cocoon = "0.4"
# RAG ingestion (design §4.4 R1): PDF text extraction (pure Rust) and DOCX
# (a zip of XML — we unzip and strip tags ourselves).
pdf-extract = "0.7"
zip = { version = "2", default-features = false, features = ["deflate"] }
# Native file-picker for the RAG library "Add documents" button.
tauri-plugin-dialog = "2"
fastembed = "4"
# Neural VAD (Silero v5) runs on the same ONNX runtime fastembed already
# pulls in — pin the exact ort version so there's a single onnxruntime link.
ort = "=2.0.0-rc.9"
# Call recording (owner request): write the two capture sides as a stereo
# 16-bit WAV. Pure-Rust, tiny; all encoding happens on a dedicated thread.
hound = "3"
